--- a/templates/glusterfs-webcenter/0/rancher-compose.yml
+++ b/templates/glusterfs-webcenter/0/rancher-compose.yml
@@ -8,7 +8,7 @@
       description: "Name to give the Gluster volume"
       label: "Volume Name"
       required: true
-      default: "my_vol"
+      default: "datavol"
       type: "string"
 glusterfs-server:
   scale: 2
